@@ -1,40 +1,3 @@
-# TicToeTacGame
-
-## Contributors
-- **Patrick Atef**
-- **Yasmeen Yasser**
-- **Abdallah Salah**
-
-## Overview
-TicToeTacGame is a Java-based Tic-Tac-Toe game that utilizes **JavaFX** for the UI and supports **joystick interfacing** for gameplay. The project includes multiple game modes, AI difficulty levels, and a score-saving system. Future enhancements include **client-server architecture** for online gameplay.
-
-## Features
-### Software (Java Logic)
-- Supports single-player mode with an AI opponent
-- Allows multiplayer mode (local & online in future updates)
-- Provides AI difficulty selection
-- Tracks and saves scores
-
-### UI (JavaFX)
-The application consists of **five UI screens**:
-1. **Main Menu** - Displays a welcome screen
-2. **Mode Selection** - Provides options for single-player or multiplayer
-3. **AI Difficulty Selection** - Appears when playing against AI
-4. **Game UI** - Manages the main gameplay interface
-5. **Score UI** - Saves and displays scores
-
-### Hardware (Joystick Interfacing)
-- Supports gameplay using **joysticks** alongside standard input controls
-- Interfaces with Java for a seamless experience
-
-## Future Updates
-- Adds online multiplayer with client-server architecture
-- Improves AI for a better single-player experience
-- Enhances joystick controls
-
-**Progress is ongoing, stay tuned!** 🚀
-
-
 # 🎮 Tic-Tac-Toe JavaFX Game
 
 [![Java](https://img.shields.io/badge/Java-17%2B-blue)](https://openjdk.org/)
@@ -43,8 +6,14 @@ The application consists of **five UI screens**:
 
 A feature-rich Tic-Tac-Toe game with JavaFX, supporting joystick input, sound effects, and multiple game modes.
 
-![Game Screenshot](screenshots/gameplay.gif) *(Add your screenshot later)*
 
+
+
+## Contributors
+- **Patrick Atef**
+- **Yasmeen Yasser**
+- **Abdallah Salah**
+- 
 ## ✨ Features
 
 - **Game Modes**
@@ -61,21 +30,113 @@ A feature-rich Tic-Tac-Toe game with JavaFX, supporting joystick input, sound ef
   - MVC pattern with FXML
   - Separated game logic (`model/`) from UI (`controllers/`)
 
-## 🛠️ Technologies
+Welcome to a fun, interactive, and joystick-enabled version of Tic Tac Toe built using **JavaFX**! This project features animated UI, emoji-based gameplay, multiple game modes, and a playful, kid-friendly theme.
 
-- **Core**: Java 17+
-- **UI**: JavaFX 19
-- **Build**: Maven
-- **Audio**: JavaFX `MediaPlayer`
-- **Input**: JInput (Joystick)
+## Features
 
-## 📦 Installation
+- **Game Modes**
+  - Player vs. Player
+  - Player vs. Computer (Easy, Medium, Hard)
+
+- **Joystick Support**
+  - Full navigation and gameplay via one or two joysticks
+  - Configurable interface for joystick-controlled scenes
+
+- **Kid-Friendly UI**
+  - Animated buttons with glowing effects
+  - Emoji-based symbols instead of "X" and "O"
+  - Playful background and celebration confetti
+  - Cartoonish font with purple-themed styling
+
+- **Smart AI**
+  - Easy: Random moves
+  - Medium: Basic win/block strategy
+  - Hard: Minimax algorithm for unbeatable play
+
+- **Virtual Keyboard**
+  - For name entry using joystick
+
+- **Modular MVC Architecture**
+  - Clean separation between View, Controller, Model, and Utility layers
+
+## Project Structure
+
+. ├── App.java ├── controllers/ │ ├── StartMenuUIController.java │ ├── ModeSelectionController.java │ ├── DifficultySelectionController.java │ ├── PlayerNameEntryController.java │ ├── GameBoardController.java │ ├── ScoreBoardController.java │ └── VirtualKeyboardController.java ├── model/ │ └── GameLogic.java ├── utils/ │ ├── JoystickReader.java │ ├── JoystickManager.java │ └── MusicController.java ├── resources/com/mycompany/tictactoegame/ │ ├── StartMenuUI.fxml │ ├── ModeSelectionUI.fxml │ ├── DifficultySelectionUI.fxml │ ├── PlayerNameEntry.fxml │ ├── VirtualKeyboard.fxml │ ├── GameBoardUI.fxml │ └── ScoreBoardUI.fxml └── audio/ └── *.mp3 files for music and sound
+
+
+## Getting Started
 
 ### Prerequisites
-- JDK 17+
-- Maven 3.8+
 
-### Steps
-1. Clone the repo:
-   ```bash
-   git clone https://github.com/PatrickAtef8/TicTacToe_Java_Project.git
+- Java 17 or later
+- JavaFX SDK 17+
+- (Optional) Joystick connected via USB
+
+### Build & Run
+
+1. Clone the repository:
+
+```bash
+git clone https://github.com/yourusername/javafx-tictactoe-joystick.git
+cd javafx-tictactoe-joystick
+Compile & Run (Using CLI or your IDE)
+
+javac --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -d out $(find . -name "*.java")
+java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -cp out App
+Replace /path/to/javafx-sdk/lib with the actual path to your JavaFX installation.
+```
+Notes
+On first run, joystick detection logs raw events to the console.
+
+Fallbacks are available if joystick is not detected (use mouse/keyboard).
+
+Contribution
+Pull requests are welcome! Feel free to submit enhancements, bug fixes, or new features.
+
+License
+This project is licensed under the MIT License.
+
+
+
+Let me know if you’d like to include a GIF or image of your UI in the README too—it’s a great touch for presentations or GitHub.
+
+
+
+
+
+markdown
+Copy code
+
+## Getting Started
+
+### Prerequisites
+
+- Java 17 or later
+- JavaFX SDK 17+
+- (Optional) Joystick connected via USB
+
+### Build & Run
+
+1. Clone the repository:
+
+```bash
+git clone https://github.com/yourusername/javafx-tictactoe-joystick.git
+cd javafx-tictactoe-joystick
+Compile & Run (Using CLI or your IDE)
+
+CLI Example (with JavaFX):
+
+bash
+Copy code
+javac --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -d out $(find . -name "*.java")
+java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -cp out App
+Replace /path/to/javafx-sdk/lib with the actual path to your JavaFX installation.
+```
+Notes
+On first run, joystick detection logs raw events to the console.
+
+Fallbacks are available if joystick is not detected (use mouse/keyboard).
+
+Contribution
+Pull requests are welcome! Feel free to submit enhancements, bug fixes, or new features.
+
